--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <i class="toggler-icon">
                 </i>
             </div>
-            <div class="display-screen"></div>
+            <div class="display-screen">
+                <div id="display"></div>
+            </div>
             <div class="buttons">
                 <table>
                     <tr>
